export class Scope {
    addDeclaration() {}
    contains() {}
    deshadow() {}
    findDeclaration() {}
    findLexicalBoundary() {}
}